logs/scraper_20250723_230651.log
Executando livelo_scraper.py...
Saída de livelo_scraper.py:

Erros de livelo_scraper.py:
  File "/home/runner/work/livelo_scraper/livelo_scraper/livelo_scraper.py", line 752
    if groups[1] in ['R
                     ^
SyntaxError: unterminated string literal (detected at line 752)

Falha no scraper. Saindo.
